--- a/code/index.html
+++ b/code/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>My First Docker Site</title>
 </head>
+
 <body>
     <h1>Hello from Docker & Nginx 🚀</h1>
+    <p>This is a simple HTML file served by Nginx running in a Docker container.</p>
+    <span>You're in a good mood!</span>
+    <input type="checkbox">
 </body>
+
 </html>
