--- a/code/form.html
+++ b/code/form.html
@@ -10,7 +10,7 @@
 
     <h1>Регистрация на мастер-класс</h1>
 
-    <form id="myForm">
+    <form id="myForm" action="process.php" method="POST">
         <input type="text" name="username" placeholder="Введите имя" required><br><br>
 
         <label>Дата рождения:</label>
@@ -32,19 +32,7 @@
 
     <div id="result"></div>
 
-    <script>
-        document.getElementById("myForm").addEventListener("submit", function (e) {
-            e.preventDefault();
-
-            const formData = new FormData(this);
-            let output = "";
-            for (const [name, value] of formData.entries()) {
-                output += `<p><b>${name}:</b> ${value}</p>`;
-            }
-
-            document.getElementById("result").innerHTML = output;
-        });
-    </script>
+    <script src="script.js"></script>
 
 </body>
 
